[tool.poetry]
name = "link-indicators"
version = "0.1.0"
description = ""
authors = ["joel <joelsperzagni@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.0"
websocket-client = "^1.6.0"
pandas = "1.5.3"
pandas-ta = "0.3.14b0"
numpy = "1.24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
